--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
-    "lucide-react": "^0.561.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "recharts": "^3.5.1",
-    "express": "^4.18.2",
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^9.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "lucide-react": "^0.561.0",
+    "multer": "^1.4.5-lts.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241205.0",
